fast/mediastream/RTCPeerConnection-* tests crashing under ASan https://bugs.webkit.org/show_bug.cgi?id=164215

Patch by Youenn Fablet <youenn@apple.com> on 2016-10-31
Reviewed by Philippe Normand.

Covered by ASAN bot tests.

* platform/mediastream/SDPProcessorScriptResource.cpp:
(WebCore::SDPProcessorScriptResource::scriptString):

Canonical link: https://commits.webkit.org/181922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208140 268f45cc-cd09-0410-ab3c-d52691b4dbfc